# level_factory

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
adapters/deli_counter/: __init__.py
adapters/dispatch/: __init__.py
adapters/laser_tag/: __init__.py
adapters/lot/: __init__.py
adapters/lux/: __init__.py
adapters/patina/: __init__.py
adapters/pixelcoat/: __init__.py
adapters/zoo/: __init__.py
apps/cli/: main.py
apps/cli/commands/: __init__.py
apps/desktop/: __main__.py  main.py
apps/desktop/models/: table_models.py
assets/godot/: run_fixture_gate.gd  run_lux_apply.gd
docs/: adapter_sdk.md  batch_guide.md  desktop_guide.md  operator_guide.md  review_ci_guide.md
examples/delco_batch/: batch.json
schemas/: README.md  mission.brief.schema.json
tests/: conftest.py
tests/contract/: test_adapter_contract.py
tests/desktop/: test_offscreen_smoke.py
tests/integration/: test_advanced_review.py  test_batch_production.py  test_end_to_end.py  test_presentation_export.py
tests/real_tools/: conftest.py  test_real_adapters.py
tests/service/: test_facade.py
tests/unit/: test_approvals_validation.py  test_batch_planner.py  test_closure_export.py  test_contracts.py  test_core.py  test_export_localize.py  test_fingerprint_cache.py  test_fixture_pipeline.py  test_invalidation.py  test_lasertag_readiness.py  test_lock_regression.py  test_planner_graph.py  test_review_ci_release.py  test_scheduler_blocking.py  test_scheduler_parallel.py  test_team_approvals.py  test_zoo_partial_build.py
tools/: smoke_lf.ps1
(+32 files in other folders)
